--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -290,6 +290,14 @@ header .nm .night_mode_btn:hover {
   background-color: #acacac;
 }
 
+@media (max-width: 1200px) {
+  header img {
+    left: 150px;
+  }
+  header nav {
+    top: 35px;
+  }
+}
 @media (max-width: 1080px) {
   header {
     width: 100%;
