--- a/scss/header.scss
+++ b/scss/header.scss
@@ -189,6 +189,7 @@ header {
         left: 200px;
         top: 10px;
         max-height: 70px;
+        transition: .2s;
     }
 
     nav{
@@ -199,6 +200,7 @@ header {
         font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif,sans-serif;
         text-transform: uppercase;
         font-weight: 500;
+        transition: .2s;
         
 
         a {
@@ -248,6 +250,21 @@ header {
             background-color: #acacac;
         }
     }
+}
+
+@media (max-width:1200px) {
+
+    header{
+        img {
+            left: 150px;
+        }
+    
+        nav{
+            top: 35px;
+        }
+    }
+
+
 }
 
 @media (max-width:1080px) {
