--- a/scss/main.scss
+++ b/scss/main.scss
@@ -371,6 +371,10 @@ main {
 
         transition: .3s;
 
+        &:hover{
+            background: linear-gradient(45deg, $light-logo 0%, $dark-logo 100%);
+        }
+
         p{
             font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif,sans-serif;
             font-size: 36px;
@@ -408,11 +412,6 @@ main {
         button:hover{
             transform: translate(20%, -60%);
         }
-    }
-
-    .kontakt:hover{
-        background: linear-gradient(45deg, $light-logo 0%, $dark-logo 100%);
-        box-shadow: inset 0px 0px 35px 10px #000000bf;
     }
 
 }
