--- a/css/index.css
+++ b/css/index.css
@@ -756,10 +756,12 @@ main .kontakt {
   background-color: cadetblue;
   background: linear-gradient(45deg, #00999d 0%, #00ff97 100%);
   position: relative;
+  margin-top: 100px;
   transition: 0.3s;
 }
 main .kontakt:hover {
   background: linear-gradient(45deg, #00ff97 0%, #00999d 100%);
+  box-shadow: inset 0px 0px 15px 10px #000000bf;
 }
 main .kontakt p {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
