--- a/css/index.css
+++ b/css/index.css
@@ -667,7 +667,7 @@ main .container_atuty .mzal p {
   font-size: 18px;
   font-weight: 600;
   color: #999;
-  letter-spacing: 5px;
+  letter-spacing: 3px;
   padding-right: 25%;
   padding-left: 25%;
 }
@@ -716,6 +716,8 @@ main .praca_z {
   padding-top: 100px;
   padding-bottom: 100px;
   text-align: center;
+  height: auto;
+  overflow: hidden;
 }
 main .praca_z p {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
@@ -727,7 +729,7 @@ main .praca_z p {
 }
 main .praca_z .galeria {
   width: 100%;
-  height: 150px;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -761,7 +763,7 @@ main .kontakt {
 }
 main .kontakt:hover {
   background: linear-gradient(45deg, #00ff97 0%, #00999d 100%);
-  box-shadow: inset 0px 0px 15px 10px #000000bf;
+  box-shadow: inset 0px 0px 15px 10px #00000069;
 }
 main .kontakt p {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
@@ -866,9 +868,9 @@ main .kontakt button:hover {
   }
 
   .kontakt p {
-    font-size: 26px !important;
+    font-size: 3vw !important;
     top: 50%;
-    left: 15% !important;
+    left: 8% !important;
     transform: translate(-10%, -50%);
   }
   .kontakt button {
