blur in bg on mobile menu

--- a/css/index.css
+++ b/css/index.css
@@ -120,6 +120,8 @@ a {
   width: 100vw;
   height: 100vh;
   background-color: #00000056;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
 
 .bottom_menu {
