--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -122,6 +122,7 @@ a {
   background-color: #00000056;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  transition: 0.3s;
 }
 
 .bottom_menu {
